--- a/p.css
+++ b/p.css
@@ -17,3 +17,24 @@ button{ font-size:50px; }
 left:0.1%;
 bottom: 10%
 }
+#f{ size: 20px;
+	position: absolute;
+top: 50%;
+display: block;
+}
+#j{
+	position: absolute;
+	right:95%; 
+	top:40%;
+	display:block;
+}
+#c{
+	/*position:absolute;*/
+	top: 50%;
+	display: block;
+}
+#x{	
+	/*position:absolute;*/
+	top: 40%;
+	left: 40%;
+	display: block;}
